# sandbox

./: .gitignore  .setup_system.bash.swp  CMakeLists.txt  README.md  package.xml
arduino/ros_arduino/: ros_arduino.ino
avis/: README.md
database/: avis.db
include/program/RB011_Omni4WD_PID_4SONAR/: RB011_Omni4WD_PID_4SONAR.ino
joy_process/include/: joy_process_class.hpp
joy_process/src/: joy_process_class.cpp  main.cpp
launch/: joy_control.launch  joy_mapping.launch  lidar.launch~  myservices.launch
msg/: ArduOdom.msg  NewTwist.msg~
node_send_goal /: CMakeLists.txt
scripts/: joy.bash  platerecog.py  setupip.bash  twist_joy.py  twist_joy.py~
send_goal/: CMakeLists.txt  package.xml  pointers.txt
send_goal/src/: send_goal.cpp
src/: file_coordinates.cpp  file_coordinates.h  omni.cpp  send_goals.cpp  uart_bridge.cpp
src/buggy_2dnav/: CMakeLists.txt
src/buggy_2dnav/cfg/: costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/buggy_2dnav/launch/: localization_2.launch  mapping.launch  move_base.launch  nonodletmap.launch  rtabmap.launch  zed_camera.launch
src/buggy_2dnav/newcfg/: global_costmap  local_costmap  tebplanner
src/buggy_2dnav/src/: send_goals.cpp  sync_odometry_nodelet.cpp
src/kernel/logic_layer/include/logic_layer/: graph.hpp
src/kernel/logic_layer/src/: graph.cpp
src/kernel/tiny_process/: CMakeLists.txt
src/malish/: CMakeLists.txt  README.md
src/malish/arduino/ros_arduino/: ros_arduino.ino
src/malish/arduino/ros_extended/: ros_extended.ino  ros_extended_uno.ino
src/malish/data/: stopwords.txt
src/malish/launch/: joy_control.launch  kernel.launch
src/malish/msg/: Diode.msg  JoyCMD.msg  Lift.msg  Sonar.msg
src/malish/scripts/: twist_joy.py
src/malish/src/: imu_transform.cpp  omni_odom.cpp  safety.cpp  sonar_transform.cpp
src/node_send_goal/: CMakeLists.txt  package.xml
src/node_send_goal/src/: Diode.h  _node_send_goal (копия).cpp  node_send_goal.cpp
src/process/goal_sender/: CMakeLists.txt  package.xml
src/process/goal_sender/include/: GoalSender.hpp
src/process/goal_sender/src/: goal_sender_class.cpp  main.cpp
src/process/joy_process/: CMakeLists.txt  package.xml
src/process/joy_process/include/: joy_process.hpp  joy_process_class.hpp
src/process/joy_process/src/: joy_process_class.cpp  joy_sender_class.cpp  main.cpp
src/process/launch/: converters.launch
src/process/lift_process/: CMakeLists.txt
src/process/lift_process/include/: lift_process.hpp
src/process/lift_process/src/: lift_process_class.cpp  main.cpp
src/process/src/: README.md
src/process/src/goal_sender/: CMakeLists.txt  package.xml
src/process/src/goal_sender/include/: GoalSender.hpp
src/process/src/goal_sender/src/: goal_sender_class.cpp  main.cpp
src/test/: Makefile  test.cpp  test_critical.txt  test_error.txt  test_ok.txt
src/update_velocity/: CMakeLists.txt  package.xml
src/update_velocity/src/: VelocityUpdater.cpp  VelocityUpdater.h  update_velocity.cpp
srv/: FindDistance.srv  FindText.srv
